<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AssetTracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="internet_error">Connect to working internet.</string>
    
    <string name="login_asset">ASSET \nTRACKER</string>
	<string name="login_email">Enter email</string>
	<string name="login_password">Enter password</string>
	<string name="login_login_button">Login</string>
	<string name="login_forgot_password"><u>Forgot Password</u></string>
	<string name="login_email_blank">Please enter email.</string>
	<string name="login_email_invalid">Please enter valid email.</string>
	<string name="login_password_blank">Please enter password.</string>
    <string name="login_logged_in">Logged in successfully.</string>
	<string name="login_error">Email or password is wrong</string>    
	<string name="login_no_record">No records found.</string>
</resources>
